# StreetOptimisation

./: .gitattributes  LICENSE  README.md  pyproject.toml
data/original/: bordils.kml
data/parsed/: bordils.json
jupyter/: converter.ipynb  optimizer.ipynb
