[tool.poetry]
name = "streetoptimisation"
version = "0.1.0"
description = ""
authors = ["Joan Marcè i Igual <j.marce.igual@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
ipykernel = "^5.5.0"
tqdm = "^4.59.0"
cartopy = {path = "external/packages/Cartopy-0.18.0-cp39-cp39-win_amd64.whl"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
